--- a/src/app.css
+++ b/src/app.css
@@ -169,4 +169,32 @@ h1 {
 .viz-container {
   width: 100%;
   height: 400px;
+  font-size: 1.2em;
+}
+.viz-container *:focus {
+  outline: none;
+}
+.viz-value {
+  height: 40px;
+  font-size: 1.3em;
+}
+ul.legend {
+  margin: 0;
+  padding: 0;
+}
+ul.legend li {
+  display: inline;
+  font-size: .8em;
+  margin: 0;
+  padding: 0;
+}
+ul.legend li + li {
+  margin-left: 8px;
+}
+ul.legend div.bullet {
+  display: inline-block;
+  vertical-align: middle;
+}
+ul.legend div.round {
+  border-radius: 50%;
 }
